# cmng

./: .gitignore  LICENSE  Makefile  README.md  go.mod  main.go
examples/: help.txt
examples/base/: CMakeLists.txt  README.md
examples/base/include/: my_class.h
examples/base/src/: main.cpp  my_class.cpp
examples/simple/: CMakeLists.txt
examples/simple/include/: my_class.h
examples/simple/src/: main.cpp  my_class.cpp
examples/simple/tests/: CMakeLists.txt  test_my_class.cpp
executer/: make_commands.go
scripts/: install-deps-only.sh  install.sh
setup/: setup.go  templates.go
utils/: git.go  os.go  scan_line.go  strings.go  vcpkg.go
